--- a/games/GnosisDisperitus.html
+++ b/games/GnosisDisperitus.html
@@ -1,121 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="Enigma Dragons Games">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Enigma Dragons Games</title>
-
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica|Open+Sans" type="text/css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="/css/main.css" type="text/css">
-    <link rel="stylesheet" href="/css/sss.css" type="text/css">
-
-    <!-- Image Carousel -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
-    <script src="/js/sss.min.js"></script>
-    <script>jQuery(function($) {$('.slider').sss();});</script>
-
-    <!-- Icon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/ico/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/ico/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/ico/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/ico/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/ico/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/ico/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/ico/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/ico/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/ico/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/ico/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/ico/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/ico/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/ico/favicon-16x16.png">
-    <link rel="manifest" href="/ico/manifest.json">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/ico/ms-icon-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-</head>
-
-<body>
-    <header class="site-header">
-        <div class="measure container space-between">
-            <a href="/index.html"><img class="site-logo-img" src="/img/logo.png" alt="Enigma Dragons Logo"/></a>
-            <a href="/index.html"><img class="site-title-img" src="/img/title.png" alt="Enigma Dragons Title Image"/></a>
-            <a class="mobile-hidden mobile-right" href="https://github.com/EnigmaDragons">
-                <img class="site-github-img" src="/img/github.png" alt="Github Link"/>
-            </a>
-        </div>
-    </header>
-
-    <div class="main measure">
-        <div class="game-title" id="title">
-            <h2>Gnosis Disperitus</h2>
-        </div>
-
-        <div class="slider" id="screenshots">
-            <img src="/img/screenshot/GnosisDisperitus/Title.jpg" />
-            <img src="/img/screenshot/GnosisDisperitus/WaterGuardian.jpg" />
-            <img src="/img/screenshot/GnosisDisperitus/RobotRepairRoom.jpg" />
-            <img src="/img/screenshot/GnosisDisperitus/IntroWoods.jpg" />
-            <img src="/img/screenshot/GnosisDisperitus/Skills.jpg" />
-            <img src="/img/screenshot/GnosisDisperitus/PowerRoomPuzzle.jpg" />
-            <img src="/img/screenshot/GnosisDisperitus/RunForYourLife.jpg" />
-        </div>
-
-        <div id="description">
-            <p>Join Anselm on his quest to become a guardian for a beautiful goddess!
-                Help him face unexpected threats as the wheels of time move ever onwards.
-                Journey with him as he explores a world that is complex and unfamiliar.
-                Confront a villain who may cause you to question your own sanity.</p>
-        </div>
-
-        <div id="technologies">
-            <h3>Technologies / Frameworks / Plugins</h3>
-            <p style="margin-top: -10px">
-                RPG Maker MV<br>
-                Yanfly Engine<br>
-                MogHunter
-            </p>
-        </div>
-
-        <div id="contest">
-            <h3 style="margin-top: 20px">Submission for Indie Game Maker Contest 2017</h3>
-            <h4 style="margin-top: -15px">Judge Ratings: 62/80 and 59/80</h4>
-            <p style="margin-top: -10px">
-                The combination of well-balanced battles, interesting puzzles and a quirky villain made for a rather engaging game.<br>
-                The battles were a lot of fun, too, due to the skills you could learn.<br>
-                Puzzles were interesting and built up on each other over time.<br>
-                Music is quite good and fits well with the scenes and areas it's used in.<br>
-                Gameplay: Surprisingly really good. The skills complement a single player game.
-            </p>
-        </div>
-
-        <div class="releases">
-            <div>
-                <a class="release-link" href="https://enigmadragons.itch.io/gnosis">
-                    <h4>
-                        <svg height="50px" width="50px" class="svg-inline--fa" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 177 177">
-                            <path fill="currentColor" d="M23 0L0 27v7.7c0 9.8 9 18.4 17 18.4 9.9 0 18-8.3 18-18 0 9.7 7.9 18 17.6 18S70 44.8 70 35c0 9.7 8.4 18 18.1 18C98 53 106 44.8 106 35a18 18 0 0 0 17.7 18c9.7 0 17.3-8.3 17.3-18 0 9.7 8.4 18 18.2 18A18 18 0 0 0 177 35v-8L152 0C108.4-.1 23 0 23 0z" fill-rule="evenodd"/>
-                            <path fill="currentColor" d="M35 48.6c-1 1.6-2.2 3-3.6 4.4-3.6 3.6-8.7 5.9-14.3 5.9-1.4 0-5-.8-5-.8v100h154V57.5c-2.4.9-4.3 1.4-7 1.4a20.3 20.3 0 0 1-17.7-10.4 20.6 20.6 0 0 1-17.7 10.4 20.3 20.3 0 0 1-17.8-10.4 20.4 20.4 0 0 1-35.5 0A20.4 20.4 0 0 1 38.3 53a19.5 19.5 0 0 1-3.3-4.4zM57.2 67c6.7 0 11.5 4.4 13.1 11h37.2c1.7-6.6 6.4-11 13.1-11 10.7 0 22.4 11 26 24.4l8.8 32c3.7 13.3-2 24.3-12.7 24.3-9.4 0-19.6-8.5-24.4-19.6H59.5c-4.9 11.1-15 19.6-24.4 19.6-10.7 0-16.4-11-12.8-24.4l8.8-32C34.8 78 46.5 67 57 67z"/>
-                            <path fill="currentColor" d="M75.7 95.4l-12.5 13.4h12.4v13.9h24.6v-13.9h13.2l-12.6-13.4-12.5-13.5z"/>
-                        </svg>
-                        <br>
-                        Itch.io
-                    </h4>
-                </a>
-                <a class="release-link" href="https://github.com/EnigmaDragons/LegendaryFrailty/releases">
-                    <h4><i class="fa fa-github large-icon" aria-hidden="true"></i><br>Github</h4>
-                </a>
-            </div>
-        </div>
+---
+layout: default
+---
+<div class="main measure">
+    <div class="game-title" id="title">
+        <h2>Gnosis Disperitus</h2>
     </div>
 
-    <footer>
-        <div><i class="fa fa-copyright" aria-hidden="true"></i> 2018 Enigma Dragons</div>
-        <span class="spacer mobile-hidden"></span>
-        <div class="mobile-hidden">We make games!</div>
-    </footer>
-</body>
-</html>
+    <div class="slider" id="screenshots">
+        <img src="/img/screenshot/GnosisDisperitus/Title.jpg" />
+        <img src="/img/screenshot/GnosisDisperitus/WaterGuardian.jpg" />
+        <img src="/img/screenshot/GnosisDisperitus/RobotRepairRoom.jpg" />
+        <img src="/img/screenshot/GnosisDisperitus/IntroWoods.jpg" />
+        <img src="/img/screenshot/GnosisDisperitus/Skills.jpg" />
+        <img src="/img/screenshot/GnosisDisperitus/PowerRoomPuzzle.jpg" />
+        <img src="/img/screenshot/GnosisDisperitus/RunForYourLife.jpg" />
+    </div>
+
+    <div id="description">
+        <p>Join Anselm on his quest to become a guardian for a beautiful goddess!
+            Help him face unexpected threats as the wheels of time move ever onwards.
+            Journey with him as he explores a world that is complex and unfamiliar.
+            Confront a villain who may cause you to question your own sanity.</p>
+    </div>
+
+    <div id="technologies">
+        <h3>Technologies / Frameworks / Plugins</h3>
+        <p style="margin-top: -10px">
+            RPG Maker MV<br>
+            Yanfly Engine<br>
+            MogHunter
+        </p>
+    </div>
+
+    <div id="contest">
+        <h3 style="margin-top: 20px">Submission for Indie Game Maker Contest 2017</h3>
+        <h4 style="margin-top: -15px">Judge Ratings: 62/80 and 59/80</h4>
+        <p style="margin-top: -10px">
+            The combination of well-balanced battles, interesting puzzles and a quirky villain made for a rather engaging game.<br>
+            The battles were a lot of fun, too, due to the skills you could learn.<br>
+            Puzzles were interesting and built up on each other over time.<br>
+            Music is quite good and fits well with the scenes and areas it's used in.<br>
+            Gameplay: Surprisingly really good. The skills complement a single player game.
+        </p>
+    </div>
+
+    <div class="releases">
+        <div>
+            <a class="release-link" href="https://enigmadragons.itch.io/gnosis">
+                <h4>
+                    <svg height="50px" width="50px" class="svg-inline--fa" aria-hidden="true" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 177 177">
+                        <path fill="currentColor" d="M23 0L0 27v7.7c0 9.8 9 18.4 17 18.4 9.9 0 18-8.3 18-18 0 9.7 7.9 18 17.6 18S70 44.8 70 35c0 9.7 8.4 18 18.1 18C98 53 106 44.8 106 35a18 18 0 0 0 17.7 18c9.7 0 17.3-8.3 17.3-18 0 9.7 8.4 18 18.2 18A18 18 0 0 0 177 35v-8L152 0C108.4-.1 23 0 23 0z" fill-rule="evenodd"/>
+                        <path fill="currentColor" d="M35 48.6c-1 1.6-2.2 3-3.6 4.4-3.6 3.6-8.7 5.9-14.3 5.9-1.4 0-5-.8-5-.8v100h154V57.5c-2.4.9-4.3 1.4-7 1.4a20.3 20.3 0 0 1-17.7-10.4 20.6 20.6 0 0 1-17.7 10.4 20.3 20.3 0 0 1-17.8-10.4 20.4 20.4 0 0 1-35.5 0A20.4 20.4 0 0 1 38.3 53a19.5 19.5 0 0 1-3.3-4.4zM57.2 67c6.7 0 11.5 4.4 13.1 11h37.2c1.7-6.6 6.4-11 13.1-11 10.7 0 22.4 11 26 24.4l8.8 32c3.7 13.3-2 24.3-12.7 24.3-9.4 0-19.6-8.5-24.4-19.6H59.5c-4.9 11.1-15 19.6-24.4 19.6-10.7 0-16.4-11-12.8-24.4l8.8-32C34.8 78 46.5 67 57 67z"/>
+                        <path fill="currentColor" d="M75.7 95.4l-12.5 13.4h12.4v13.9h24.6v-13.9h13.2l-12.6-13.4-12.5-13.5z"/>
+                    </svg>
+                    <br>
+                    Itch.io
+                </h4>
+            </a>
+            <a class="release-link" href="https://github.com/EnigmaDragons/LegendaryFrailty/releases">
+                <h4><i class="fa fa-github large-icon" aria-hidden="true"></i><br>Github</h4>
+            </a>
+        </div>
+    </div>
+</div>
